src/objects/DFDemo_Bands__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Used to generate the range of values for bands that relate to usage values for each range.</description>
    <fields>
        <fullName>Evaluate_for_Downgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluate for Downgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluate_for_Upgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluate for Upgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Licenses__c</fullName>
        <description>Used to specify the target licenses for a given range of Band values.</description>
        <inlineHelpText>Used to specify the target licenses for a given range of Band values.</inlineHelpText>
        <label>Licenses</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Logins__c</fullName>
        <description>Used to specify the logins for a given range of Band values.</description>
        <inlineHelpText>Used to specify the logins for a given range of Band values.</inlineHelpText>
        <label>Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>DFDemo Bands</label>
</CustomObject>